write api auth, middleware protect, refactor code
