# controllers/auth/response.go
@@ -1,0 +1,11 @@
+package auth
+
+type LoginResponse struct {
+	AccessToken  string `json:"access_token"`
+	RefreshToken string `json:"refresh_token"`
+}
+
+type MessageResponse struct {
+	Success bool   `json:"success"`
+	Message string `json:"message"`
+}
