# docs/swagger.json
@@ -15,8 +15,54 @@
         "version": "1.0"
     },
     "host": "localhost:8080",
-    "basePath": "/v1",
+    "basePath": "/api/v1",
     "paths": {
+        "/auth/login": {
+            "post": {
+                "description": "Login account",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Login",
+                "parameters": [
+                    {
+                        "description": "body data",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/auth.RequestLogin"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/auth.LoginResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/auth.MessageResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/auth.MessageResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/users": {
             "post": {
                 "description": "Create new user on the system",
@@ -37,7 +83,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controllers.NewUser"
+                            "$ref": "#/definitions/user.NewUser"
                         }
                     }
                 ],
@@ -51,13 +97,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/controllers.MessageResponse"
+                            "$ref": "#/definitions/user.MessageResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/controllers.MessageResponse"
+                            "$ref": "#/definitions/user.MessageResponse"
                         }
                     }
                 }
@@ -89,13 +135,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/controllers.MessageResponse"
+                            "$ref": "#/definitions/user.MessageResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/controllers.MessageResponse"
+                            "$ref": "#/definitions/user.MessageResponse"
                         }
                     }
                 }
@@ -120,7 +166,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controllers.NewUser"
+                            "$ref": "#/definitions/user.NewUser"
                         }
                     }
                 ],
@@ -134,13 +180,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/controllers.MessageResponse"
+                            "$ref": "#/definitions/user.MessageResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/controllers.MessageResponse"
+                            "$ref": "#/definitions/user.MessageResponse"
                         }
                     }
                 }
@@ -164,19 +210,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controllers.MessageResponse"
+                            "$ref": "#/definitions/user.MessageResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/controllers.MessageResponse"
+                            "$ref": "#/definitions/user.MessageResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/controllers.MessageResponse"
+                            "$ref": "#/definitions/user.MessageResponse"
                         }
                     }
                 }
@@ -184,7 +230,18 @@
         }
     },
     "definitions": {
-        "controllers.MessageResponse": {
+        "auth.LoginResponse": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                },
+                "refresh_token": {
+                    "type": "string"
+                }
+            }
+        },
+        "auth.MessageResponse": {
             "type": "object",
             "properties": {
                 "message": {
@@ -192,55 +249,40 @@
                 }
             }
         },
-        "controllers.NewUser": {
+        "auth.RequestLogin": {
             "type": "object",
             "required": [
-                "address",
-                "birthday",
-                "department_id",
                 "email",
-                "employee_code",
-                "full_name",
-                "gender",
-                "phone",
-                "role_id"
+                "password"
             ],
             "properties": {
-                "address": {
-                    "type": "string",
-                    "example": "Hoai Duc, Ha Noi"
-                },
-                "birthday": {
-                    "type": "string",
-                    "example": "2022-10-07T08:43:38+00:00"
-                },
-                "department_id": {
-                    "type": "integer",
-                    "example": 1
-                },
                 "email": {
                     "type": "string",
                     "example": "mynamebvh@gmail.com"
                 },
-                "employee_code": {
+                "password": {
                     "type": "string",
-                    "example": "001"
+                    "example": "hoangdz"
+                }
+            }
+        },
+        "models.Token": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
                 },
-                "full_name": {
-                    "type": "string",
-                    "example": "Bui Viet Hoang"
+                "id": {
+                    "type": "integer"
                 },
-                "gender": {
-                    "type": "boolean",
-                    "example": true
+                "type": {
+                    "type": "string"
                 },
-                "phone": {
-                    "type": "string",
-                    "example": "0979150931"
+                "user_id": {
+                    "type": "integer"
                 },
-                "role_id": {
-                    "type": "integer",
-                    "example": 1
+                "value": {
+                    "type": "string"
                 }
             }
         },
@@ -275,17 +317,82 @@
                 "id": {
                     "type": "integer"
                 },
-                "password": {
-                    "type": "string"
-                },
                 "phone": {
                     "type": "string"
                 },
                 "role_id": {
                     "type": "integer"
                 },
+                "token": {
+                    "$ref": "#/definitions/models.Token"
+                },
                 "updated_at": {
                     "type": "string"
+                }
+            }
+        },
+        "user.MessageResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "user.NewUser": {
+            "type": "object",
+            "required": [
+                "address",
+                "birthday",
+                "department_id",
+                "email",
+                "employee_code",
+                "full_name",
+                "gender",
+                "password",
+                "phone",
+                "role_id"
+            ],
+            "properties": {
+                "address": {
+                    "type": "string",
+                    "example": "Hoai Duc, Ha Noi"
+                },
+                "birthday": {
+                    "type": "string",
+                    "example": "2022-10-07T08:43:38+00:00"
+                },
+                "department_id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "email": {
+                    "type": "string",
+                    "example": "mynamebvh@gmail.com"
+                },
+                "employee_code": {
+                    "type": "string",
+                    "example": "001"
+                },
+                "full_name": {
+                    "type": "string",
+                    "example": "Bui Viet Hoang"
+                },
+                "gender": {
+                    "type": "boolean",
+                    "example": true
+                },
+                "password": {
+                    "type": "string",
+                    "example": "hoangdz"
+                },
+                "phone": {
+                    "type": "string",
+                    "example": "0979150931"
+                },
+                "role_id": {
+                    "type": "integer",
+                    "example": 1
                 }
             }
         }
