# routes/auth.go
@@ -1,0 +1,11 @@
+package routes
+
+import (
+	controllers "employee_manage/controllers/auth"
+
+	"github.com/gin-gonic/gin"
+)
+
+func authRoute(route *gin.RouterGroup) {
+	route.POST("/login", controllers.Login)
+}
